# RubricAgent

./: .dockerignore  .env  .gitignore  README.md  api_examples.sh  docker-compose.yml  main.py  pyproject.toml  test_api.py
backend/: Dockerfile  local_Dockerfile
backend/src/: __init__.py  chains.py  main.py  nodes.py  rubric.py  state.py  testing_note.ipynb
frontend/: Dockerfile  config.js  index.html  nginx.conf  script.js  styles.css
